# LiDAR_Detection_With_SemanticKITTI

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirement.txt  requirements.txt
launch/: velodyne_launch.py
models/: dataset.py  model.py  train.py
nodes/: human_detection_node.py
scripts/: bag_to_pcd.py  process_data.py
